@@ -25,6 +25,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Add usage view for pages (Sage Abdullah)
  * Copy page form now updates the slug field dynamically with a slugified value on blur (Loveth Omokaro)
  * Ensure selected collection is kept when navigating from documents or images listings to add multiple views & upon upload (Aman Pandey, Bojan Mihelac)
+ * Keep applied filters when downloading form submissions (Suyash Srivastava)
 
 ### Bug fixes
 
