@@ -83,13 +83,13 @@
 {% block content %}
     {% fragment as form_actions %}
         <div class="dropdown dropdown-button">
-            <a href="?export=xlsx" class="button bicolor button--icon">
+            <a href="{{ view.xlsx_export_url }}" class="button bicolor button--icon">
                 {% icon name="download" wrapped=1 %}{% trans 'Download XLSX' %}
             </a>
             <div class="dropdown-toggle">{% icon name="arrow-down" %}</div>
             <ul>
                 <li>
-                    <a class="button bicolor button--icon" href="?export=csv">
+                    <a class="button bicolor button--icon" href="{{ view.csv_export_url }}">
                         {% icon name="download" wrapped=1 %}{% trans 'Download CSV' %}
                     </a>
                 </li>
